clang/test/BSC/Negative/Ownership/RuleCheck/param-or-var/param-or-var.cbs
// RUN: %clang_cc1 -verify %s

struct A {};

void func1(int * _Owned a) {} // expected-error {{memory leak of value: `a`}}

void func2(int * _Owned a) {
	{}
} // expected-error {{memory leak of value: `a`}}

void func5(struct A * _Owned a) {} // expected-error {{memory leak of value: `a`}}

void func6(int * _Owned a) {
	int num = 5;
	a = (int * _Owned)&num; // expected-error {{assign to _Owned value: `a`}}
} // expected-error {{memory leak of value: `a`}}

void func7() {
	int num = 1;
	int * _Owned a;
	a = (int * _Owned)&num;
} // expected-error {{memory leak of value: `a`}}

void func13(int * _Owned a) {
	int * _Owned p = a;
	int n = 0;
	a = (int * _Owned)&n;
} // expected-error {{memory leak of value: `a`}} expected-error {{memory leak of value: `p`}}

void func14(int * _Owned a, int * _Owned b) {
	a = b; // expected-error {{assign to _Owned value: `a`}}
} // expected-error {{memory leak of value: `a`}}


struct B {
	int * _Owned a;
	int * _Owned b;
};

void func15(struct B b) {
	int * _Owned a = b.a;
} // expected-error {{field memory leak of value: `b`, b.b is leak}} expected-error {{memory leak of value: `a`}}

struct B func16(struct B b) {
	int * _Owned a = b.b;
	return b; // expected-error {{use of partially moved value: `b`, b.b is moved}} expected-error {{memory leak of value: `a`}}
}

int main() {
	return 0;
}